photon fusion fixed