@@ -2,6 +2,8 @@ plugins {
     id 'java'
 }
 
+import org.gradle.internal.os.OperatingSystem
+
 dependencies {
     implementation project(':athena-core')
     implementation "edu.wpi.first.wpilibj:wpilibj-java:${rootProject.ext.wpilibVersion}"
@@ -10,7 +12,77 @@ dependencies {
     implementation "edu.wpi.first.ntcore:ntcore-java:${rootProject.ext.wpilibVersion}"
     implementation "edu.wpi.first.wpiutil:wpiutil-java:${rootProject.ext.wpilibVersion}"
     implementation "edu.wpi.first.wpiunits:wpiunits-java:${rootProject.ext.wpilibVersion}"
+    testImplementation "edu.wpi.first.wpilibNewCommands:wpilibNewCommands-java:${rootProject.ext.wpilibVersion}"
+    testImplementation "edu.wpi.first.thirdparty.frc2025.opencv:opencv-java:${rootProject.ext.athenaVersions.opencv}"
     implementation "org.photonvision:photonlib-java:${rootProject.ext.athenaVersions.photonlib}"
     implementation "org.photonvision:photontargeting-java:${rootProject.ext.athenaVersions.photontargeting}"
     implementation "com.fasterxml.jackson.core:jackson-annotations:${rootProject.ext.athenaVersions.jackson}"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.10.2"
+}
+
+configurations {
+    wpilibTestNatives
+}
+
+def hostOs = OperatingSystem.current()
+def normalizedHostArch = ((System.getProperty('os.arch') ?: '').toLowerCase(Locale.ROOT) in ['x86_64', 'amd64'])
+        ? 'x86-64'
+        : (((System.getProperty('os.arch') ?: '').toLowerCase(Locale.ROOT) in ['aarch64', 'arm64']) ? 'arm64' : null)
+
+if (normalizedHostArch == null && !hostOs.isMacOsX()) {
+    throw new GradleException("Unsupported host architecture for WPILib test natives: ${System.getProperty('os.arch')}")
+}
+
+def wpilibNativeClassifier
+def wpilibNativeSharedPath
+def wpilibNativeEnvVar
+if (hostOs.isWindows()) {
+    wpilibNativeClassifier = "windows${normalizedHostArch}"
+    wpilibNativeSharedPath = "windows/${normalizedHostArch}/shared"
+    wpilibNativeEnvVar = 'PATH'
+} else if (hostOs.isLinux()) {
+    wpilibNativeClassifier = "linux${normalizedHostArch}"
+    wpilibNativeSharedPath = "linux/${normalizedHostArch}/shared"
+    wpilibNativeEnvVar = 'LD_LIBRARY_PATH'
+} else if (hostOs.isMacOsX()) {
+    wpilibNativeClassifier = 'osxuniversal'
+    wpilibNativeSharedPath = 'osx/universal/shared'
+    wpilibNativeEnvVar = 'DYLD_LIBRARY_PATH'
+} else {
+    throw new GradleException("Unsupported host OS for WPILib test natives: ${System.getProperty('os.name')}")
+}
+
+dependencies {
+    wpilibTestNatives "edu.wpi.first.hal:hal-cpp:${rootProject.ext.wpilibVersion}:${wpilibNativeClassifier}@zip"
+    wpilibTestNatives "edu.wpi.first.wpiutil:wpiutil-cpp:${rootProject.ext.wpilibVersion}:${wpilibNativeClassifier}@zip"
+    wpilibTestNatives "edu.wpi.first.wpinet:wpinet-cpp:${rootProject.ext.wpilibVersion}:${wpilibNativeClassifier}@zip"
+    wpilibTestNatives "edu.wpi.first.ntcore:ntcore-cpp:${rootProject.ext.wpilibVersion}:${wpilibNativeClassifier}@zip"
+    wpilibTestNatives "edu.wpi.first.cscore:cscore-cpp:${rootProject.ext.wpilibVersion}:${wpilibNativeClassifier}@zip"
+    wpilibTestNatives "edu.wpi.first.wpimath:wpimath-cpp:${rootProject.ext.wpilibVersion}:${wpilibNativeClassifier}@zip"
+    wpilibTestNatives "edu.wpi.first.apriltag:apriltag-cpp:${rootProject.ext.wpilibVersion}:${wpilibNativeClassifier}@zip"
+    wpilibTestNatives "edu.wpi.first.thirdparty.frc2025.opencv:opencv-cpp:${rootProject.ext.athenaVersions.opencv}:${wpilibNativeClassifier}@zip"
+    wpilibTestNatives "org.photonvision:photontargeting-cpp:${rootProject.ext.athenaVersions.photontargeting}:${wpilibNativeClassifier}@zip"
+}
+
+def extractedWpilibNativesDir = layout.buildDirectory.dir('wpilib-test-natives')
+
+tasks.register('extractWpilibTestNatives', Copy) {
+    from {
+        configurations.wpilibTestNatives.collect { zipTree(it) }
+    }
+    include "${wpilibNativeSharedPath}/*"
+    into extractedWpilibNativesDir
+}
+
+test {
+    useJUnitPlatform()
+    maxParallelForks = 1
+    maxHeapSize = '1g'
+    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
+    jvmArgs '-Xms512m', '-Xmx1g'
+    dependsOn tasks.named('extractWpilibTestNatives')
+    def nativePath = extractedWpilibNativesDir.get().file(wpilibNativeSharedPath).asFile.absolutePath
+    systemProperty 'java.library.path', nativePath
+    def existingNativePath = System.getenv(wpilibNativeEnvVar)
+    environment wpilibNativeEnvVar, existingNativePath ? "${nativePath}${File.pathSeparator}${existingNativePath}" : nativePath
 }
